# PlantDocctor

./: Dockerfile  PlaceName.py  README.md  main.py  plant_doctor.py  pyproject.toml  requirements.txt  test.ipynb
app/: WeatherForcaster.py  main.py  plant_doctor.py
